[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/95.tres" type="Theme" id=1]
[ext_resource path="res://src/screen/windows/settings/Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/confirmation_001.ogg" type="AudioStream" id=3]
[ext_resource path="res://src/screen/buttons/SwitchHold.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/windows/Windows_Inner_Frame.png" type="Texture" id=5]

[node name="Settings" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 520, 230 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound"

[node name="VolumeControls" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 48.0
margin_right = 240.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="VolumeControls"]
margin_right = 200.0
margin_bottom = 13.0
text = "Audio"
align = 1

[node name="SoundVolume" type="HSlider" parent="VolumeControls"]
margin_top = 17.0
margin_right = 200.0
margin_bottom = 38.0
rect_min_size = Vector2( 200, 0 )
max_value = 1.1
step = 0.1

[node name="Panel" type="NinePatchRect" parent="."]
margin_left = 272.0
margin_top = 32.0
margin_right = 488.0
margin_bottom = 200.0
texture = ExtResource( 5 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Label" type="Label" parent="Panel"]
margin_right = 216.0
margin_bottom = 24.0
text = "Access Permissions"
align = 1
valign = 1

[node name="Location" type="CheckBox" parent="Panel"]
margin_left = 16.0
margin_top = 24.0
margin_right = 206.0
margin_bottom = 54.0
rect_min_size = Vector2( 190, 30 )
pressed = true
text = "Give Turing access to your location"

[node name="Microphone" type="CheckBox" parent="Panel"]
margin_left = 16.0
margin_top = 72.0
margin_right = 206.0
margin_bottom = 102.0
rect_min_size = Vector2( 190, 30 )
pressed = true
text = "Give Turing access to Microphone"

[node name="Camera" type="CheckBox" parent="Panel"]
margin_left = 16.0
margin_top = 120.0
margin_right = 206.0
margin_bottom = 150.0
rect_min_size = Vector2( 190, 30 )
disabled = true
pressed = true
text = "Give Turing access to Camera"

[node name="SwitchHold" parent="." instance=ExtResource( 4 )]
margin_left = 72.0
margin_top = 152.0
margin_right = 200.0
margin_bottom = 176.0
text = "HOLD TO LOGOUT"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 256.0
margin_bottom = 128.0
texture = ExtResource( 5 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
margin_left = 16.0
margin_top = 136.0
margin_right = 256.0
margin_bottom = 200.0
texture = ExtResource( 5 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[connection signal="value_changed" from="VolumeControls/SoundVolume" to="." method="_on_SoundVolume_value_changed"]
[connection signal="meter_full" from="SwitchHold" to="." method="_on_SwitchHold_meter_full"]
